force-app/main/default/objects/KT_Bulk_Document_Job__c/KT_Bulk_Document_Job__c.object-meta.xml
<CustomObject>
    <description>Bulk document generation and dispatch job tracker for HR Ops cohorts.</description>
    <label>KT Bulk Document Job</label>
    <nameField>
        <displayFormat>BDOC-{000000}</displayFormat>
        <label>Bulk Document Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Bulk Document Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>