force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_Id__c</fullName>
    <description>Salesforce Batch Apex AsyncApexJob Id for monitoring in Setup.</description>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>