force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>Timestamp when all batches completed. Null while the job is running.</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>