force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Records that failed during bulk processing.</description>
    <label>Failure Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>