force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Failure_Summary__c.field-meta.xml
<CustomField>
    <fullName>Failure_Summary__c</fullName>
    <description>Aggregated per-record failure details captured during bulk document generation and signature dispatch.</description>
    <label>Failure Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>