force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HR Admin who triggered the bulk job.</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Initiated Bulk Document Jobs</relationshipLabel>
    <relationshipName>InitiatedBulkDocumentJobs</relationshipName>
    <type>Lookup</type>
</CustomField>