force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Onboarding records processed so far, including successes and failures.</description>
    <label>Processed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>