force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>Timestamp when Batch Apex execution began.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>