force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Success_Count__c.field-meta.xml
<CustomField>
    <fullName>Success_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Documents successfully generated and dispatched.</description>
    <label>Success Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>