force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document template used for this bulk job.</description>
    <label>Template</label>
    <referenceTo>KT_DocumentTemplate__c</referenceTo>
    <relationshipLabel>Bulk Document Jobs</relationshipLabel>
    <relationshipName>BulkDocumentJobs</relationshipName>
    <type>Lookup</type>
</CustomField>