force-app/main/default/objects/KT_Bulk_Document_Job__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of onboarding records in the batch.</description>
    <label>Total Records</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>